Trying to work around some browser rendering/layout bugs by moving some of the width controls into the style sheets.  There is something strange in some browsers when you dynamically add new DOM elements and the way the width stuff interacts with tables and colspan.  Some browsers get really confused (like safari) while others do not (IE) and some are almost correct but can be tricked via some style sheet strangenesses (Mozilla)
Note that this is really just pushing the limits of what browsers like to
do dynamically.  I don't know how else to solve this problem...

--- a/styles.css
+++ b/styles.css
@@ -288,6 +288,7 @@ a:active {color: red; text-decoration: underline;}
 {
   padding-right: 5px;
   text-align: right;
+  white-space: nowrap;
 }
 
 .updirrow
@@ -312,9 +313,11 @@ a:active {color: red; text-decoration: underline;}
   border-top: 1px rgb(90%,70%,30%) solid;
 }
 
-.path
+td.path
 {
   padding: 2px;
+  width: 99%;
+  white-space: nowrap;
 }
 
 .path a, .path a:visited
@@ -337,6 +340,12 @@ a:active {color: red; text-decoration: underline;}
 .path a:active
 {
   background: rgb(0%,100%,0%);
+}
+
+td.pathname
+{
+  width: 99%;
+  white-space: nowrap;
 }
 
 .svnentryicon
@@ -386,10 +395,10 @@ a:active {color: red; text-decoration: underline;}
 
 td.showlog
 {
-  width: 1%;
+  width: 1px;
 }
 
-.foldspace
+td.foldspace
 {
   width: 1%;
   padding: 0px;
@@ -448,6 +457,11 @@ td.showlog
   border-top: 1px black solid;
   border-bottom: 1px black solid;
   font-size: 12pt;
+}
+
+table.revision
+{
+  width: 100%;
 }
 
 tr.revision:hover
@@ -539,6 +553,7 @@ img.user
   font-weight: normal;
   font-size: 10pt;
   text-align: right;
+  width: 99%;
 }
 
 td.details
